Add fallback with 'v' prefix for Go Proxy .info endpoint.
This allows resolving pseudo-versions and other references that might be
provided without the 'v' prefix, which is required by the Go Proxy protocol
for the .info endpoint.

BUG=506949232
FIXED=506949232
GWSQ_IGNORES: tbrix@google.com
PiperOrigin-RevId: 906312428
Change-Id: I050fc1b67bb763bf7dff9c3a82011022384379b7